--- a/src/components/common/Header.css
+++ b/src/components/common/Header.css
@@ -9,6 +9,8 @@
   justify-content: space-between;
   align-items: center;
   padding: 0 15px;
+  padding-left: 10%;
+  padding-right: 10%;
   /* box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2); */
 }
 
