--- a/src/components/common/VideoBackground.css
+++ b/src/components/common/VideoBackground.css
@@ -4,7 +4,7 @@
   height: 100vh;
   width: 100%;
   overflow: hidden;
-  font-family: "Segoe UI", sans-serif;
+  font-family: "Playfair Display", serif;
 }
 /*Background Video*/
 .video-bg {
