--- a/src/components/common/Header.css
+++ b/src/components/common/Header.css
@@ -1,5 +1,5 @@
 .header {
-  position: absolute;
+  position: fixed;
   width: 100%;
   top: 0;
   height: 90px;
@@ -11,7 +11,7 @@
   padding: 0 15px;
   padding-left: 10%;
   padding-right: 10%;
-  /* box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2); */
+  backdrop-filter: blur(2px);
 }
 
 .nav {
@@ -107,6 +107,7 @@
     margin-top: 10px;
   }
 }
-.btn {
-  margin-top: 20px;
+
+.request-btn {
+  margin-top: 5px;
 }
