--- a/src/components/home/Portfolio.css
+++ b/src/components/home/Portfolio.css
@@ -7,32 +7,24 @@
 }
 
 .portfolio-heading {
+  position: relative;
   font-family: "Playfair Display", serif;
-  font-size: 3.2rem;
-  font-weight: 600;
-  color: #ffffff;
-  letter-spacing: 0.08em;
-  text-transform: uppercase;
-  margin-bottom: 4rem;
-  opacity: 0;
-  transform: translateY(20px);
-  animation: fadeInUp 1s ease forwards;
-  margin-top: 4rem;
-  text-shadow: 0 0 10px rgba(255, 255, 255, 0.08);
+  font-size: 3rem;
+  color: #f5f5f5;
+  text-align: center;
+  /* text-transform: uppercase; */
+  letter-spacing: 0.1em;
+  font-weight: 700;
+  background: linear-gradient(to right, #f5e2a9, #a38323);
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  opacity: 1;
 }
-.explore-more {
-  font-family: "Playfair Display", serif;
-  font-size: 3.2rem;
-  font-weight: 600;
-  color: #ffffff;
-  letter-spacing: 0.08em;
-  text-transform: uppercase;
-  margin-bottom: 4rem;
-  opacity: 0;
-  transform: translateY(20px);
-  animation: fadeInUp 1s ease forwards;
-  margin-top: 0;
-  text-shadow: 0 0 10px rgba(255, 255, 255, 0.08);
+
+.portfolio-desc {
+  font-size: 1.3rem;
+  margin-top: 10px;
 }
 
 .card-overlay {
@@ -47,18 +39,17 @@
   border-bottom-left-radius: 12px;
   border-bottom-right-radius: 12px;
   backdrop-filter: blur(6px);
-  -webkit-backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(6px);
   z-index: 2;
 }
 
 .card-overlay h4 {
   font-size: 1.2rem;
-  margin: 0 0 4px;
 }
 
 .card-overlay p {
   font-size: 0.95rem;
-  margin-bottom: 8px;
+  margin-bottom: 10px;
 }
 .horizontal-scroll-container {
   display: flex;
@@ -82,7 +73,7 @@
   overflow: hidden;
   position: relative;
   transition: transform 0.3s ease;
-  margin-right: 1.5rem;
+  margin-right: 1.7rem;
 }
 
 .scroll-card:hover {
@@ -108,6 +99,9 @@
   animation: blink 1.5s infinite;
   display: none;
 }
+/* .view-btn {
+  padding: 20px 18px;
+} */
 
 @media (max-width: 768px) {
   .scroll-card:active .card-overlay {
@@ -116,6 +110,9 @@
   .swipe-indicator {
     display: block;
   }
+}
+.portfolio-heading {
+  margin-top: 10%;
 }
 
 @keyframes blink {
