--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -42,7 +42,7 @@ body {
 
 /* LINKS */
 a {
-  color: var(--primary);
+  color: var(--text-muted);
   text-decoration: none;
   transition: color 0.3s ease;
 }
@@ -76,7 +76,7 @@ p {
   display: inline-block;
   background-color: #a38323;
   color: #000;
-  padding: 12px 24px;
+  padding: 10px 24px;
   text-decoration: none;
   border-radius: 25px;
   font-weight: bold;
@@ -131,7 +131,7 @@ p {
   background: var(--surface-dark);
 }
 ::-webkit-scrollbar-thumb {
-  background-color: var(--primary);
+  background-color: var(--text-muted);
   border-radius: 10px;
 }
 ::-webkit-scrollbar-thumb:hover {
@@ -156,15 +156,15 @@ p {
 }
 .scroll-to-top {
   position: fixed;
-  bottom: 2rem;
+  bottom: 3rem;
   right: 2rem;
   z-index: 999;
   background-color: #504f4f;
   color: white;
   border: none;
   border-radius: 50%;
-  width: 4rem;
-  height: 4rem;
+  width: 2.5rem;
+  height: 2.5rem;
   font-size: 1.5rem;
   cursor: pointer;
   box-shadow: 0 0 10px rgba(255, 255, 255, 0.1);
