--- a/src/components/common/Header.css
+++ b/src/components/common/Header.css
@@ -81,7 +81,7 @@
     right: 0;
     width: 100%;
     background: rgba(0, 0, 0, 0.7);
-    backdrop-filter: blur(8px);
+    backdrop-filter: blur(4px);
     flex-direction: column;
     padding: 20px 0;
     display: none;
@@ -96,6 +96,8 @@
     transform: translateY(0);
     opacity: 1;
     pointer-events: auto;
+    background-color: black;
+    margin-top: 1rem;
   }
 
   .hamburger {
